# apkalypse

./: .env.example  .gitignore  PREREQUISITES.md  README.md  install-prerequisites.ps1  pyproject.toml  requirements.txt
APKalypse/: __init__.py  cli.py
APKalypse/agents/: android_implementation.py  base.py  behavioral_observer.py  product_spec.py  qa_parity.py  registry.py  system_architect.py
APKalypse/core/: config.py  exceptions.py  logging.py  types.py
APKalypse/models/: __init__.py  apk.py  behavior.py  codegen.py  spec.py
APKalypse/orchestration/: __init__.py  pipeline.py  tasks.py
APKalypse/services/: __init__.py
APKalypse/services/architecture/: service.py
APKalypse/services/behavior_model/: __init__.py  service.py
APKalypse/services/codegen/: service.py
APKalypse/services/compliance/: __init__.py  service.py
APKalypse/services/dynamic_analysis/: service.py
APKalypse/services/ingestion/: service.py
APKalypse/services/spec_generation/: service.py
APKalypse/services/static_analysis/: __init__.py  service.py
APKalypse/services/verification/: service.py
APKalypse/storage/: __init__.py  interface.py  local.py
docs/: AGENTS.md  ARCHITECTURE.md  DATA_MODELS.md  LEGAL_COMPLIANCE.md  PIPELINE.md  README.md
prompts/: behavioral_observer.md  product_spec_author.md  system_architect.md
schemas/: architecture-spec.schema.json  behavior-model.schema.json  behavioral-spec.schema.json
src/: __init__.py  cli.py
src/agents/: __init__.py  base.py  behavioral_observer.py  qa_parity.py  registry.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/models/: __init__.py  apk.py  behavior.py
src/orchestration/: __init__.py  pipeline.py  tasks.py
src/services/: __init__.py
src/services/architecture/: __init__.py
src/services/behavior_model/: service.py
src/services/codegen/: __init__.py
src/services/dynamic_analysis/: __init__.py  service.py
src/services/ingestion/: __init__.py  service.py
src/services/spec_generation/: __init__.py
src/services/verification/: __init__.py  (+1 more)
src/storage/: __init__.py  local.py
tests/: conftest.py
tests/unit/: test_agents.py  test_models.py  test_services.py  test_storage.py
(+1 files in other folders)
