[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "APKalypse"
version = "1.0.0"
description = "Automated pipeline for deriving behavioral specifications from APKs and generating greenfield Android apps"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "APKalypse Team"}
]
keywords = ["android", "apk", "behavioral-analysis", "code-generation", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.5.0",
    "prefect>=2.14.0,<3.6.0",  # Pin to avoid websockets>=15 conflict with frida-tools
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "openai>=1.6.0",  # Also provides Azure OpenAI support via AsyncAzureOpenAI
    "anthropic>=0.8.0",
    "pillow>=10.1.0",
    "networkx>=3.2.0",
    "jsonschema>=4.20.0",
    "click>=8.1.7",
    "typer>=0.9.0",
    "tenacity>=8.2.3",
    "eval-type-backport>=0.1.3",
    "websockets>=13.0.0,<14.0.0",  # Pin for frida-tools compatibility
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
]

[project.scripts]
APKalypse = "APKalypse.cli:main"
b2b = "APKalypse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["APKalypse"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
